--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <body>
 <h1> SPASE resource descriptions with the CNES naming authority. </h1>
   <h2> CDPP </h2>
-  <a href="./CNES/NumericalData/index.html">NumericalData <br>
-  <a href="./CNES/Instrument/index.html">Instrument <br>
-  <a href="./CNES/Observatory/index.html">Observatory <br>
-  <a href="./CNES/Person/index.html">Person <br>
-  <a href="./CNES/Repository/index.html">Repository <br>
+  <a href="./CNES_QUAL/NumericalData/index.html">NumericalData <br>
+  <a href="./CNES_QUAL/Instrument/index.html">Instrument <br>
+  <a href="./CNES_QUAL/Observatory/index.html">Observatory <br>
+  <a href="./CNES_QUAL/Person/index.html">Person <br>
+  <a href="./CNES_QUAL/Repository/index.html">Repository <br>
 </body>
 </html>
