--- a/CNES_QUAL/NumericalData/CDPP-Archive/DoubleStar1/HIA/index.html
+++ b/CNES_QUAL/NumericalData/CDPP-Archive/DoubleStar1/HIA/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
-<h2>CDPP/CNES/NumericalData/DoubleStar1</h2>
+  <h2>CDPP/CNES/NumericalData/DoubleStar1/HIA</h2>
   <a href="../index.html">.. <br><br>
-  <a href="./HIA/index.html">HIA
+  <a href="DSTAR_D1_CP_HIA_3D_PEF.html">DSTAR_D1_CP_HIA_3D_PEF
 </body>
-</html>  
+</html> 
