--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   </div>
 
   <div id="title">
-  <h2 >Les métadonnées du CDPP organisées par ressource SPASE </h2>
+  <h2 >QUAL : Les métadonnées du CDPP organisées par ressource SPASE </h2>
   </div>
 
 
